--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -3,7 +3,7 @@
 # image will be published to ghcr.io/<user>/<name>
 name: test-os
 # description will be included in the image's metadata
-description: This is my personal OS image.
+description: Test - custom BlueBuild image
 
 # the base image to build on top of (FROM) and the version tag to use
 base-image: ghcr.io/ublue-os/silverblue-main
@@ -38,8 +38,8 @@ modules:
         scope: system
         # If no repo information is specified, Flathub will be used by default
         install: # system flatpaks we want all users to have and not remove
-          - org.mozilla.firefox
           - org.gnome.Loupe
-      - scope: user # Also add Flathub user repo, but no user packages
+          - com.google.Chrome
+      - scope: system # Also add Flathub user repo, but no user packages
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
